--- a/docs/README_add_hook.adoc
+++ b/docs/README_add_hook.adoc
@@ -67,11 +67,9 @@ include::partials/check_yml_sample.adoc[]
 
 === И что дальше?
 
-Далее перед каждой попыткой внести изменения с помощью `git commit` будет запускаться скрипт, который проверяет
-наличие всех файлов по ссылкам из `PDF_*.yml`.
+Далее перед каждой попыткой внести изменения с помощью `git commit` будет запускаться скрипт, который проверяет наличие всех файлов по ссылкам из `PDF_*.yml`.
 
-Если в YAML-файле присутствуют некорректные ссылки, то `git commit` будет отклонен,
-а в log-файл `PROJECT_ROOT/inspect_yaml_PDF_*_yaml.log` будет записан вывод скрипта после проверки.
+Если в YAML-файле присутствуют некорректные ссылки, то `git commit` будет отклонен, а в log-файл `PROJECT_ROOT/inspect_yaml_PDF_*_yaml.log` будет записан вывод скрипта после проверки.
 
 Если с YAML-файлом все хорошо, то никаких более изменений в стандартный порядок вещей не вносится.
 
