--- a/docs/README_terms.adoc
+++ b/docs/README_terms.adoc
@@ -14,7 +14,7 @@
 . Загрузить файл `terms.exe`.
 . Запустить загруженный файл двойным нажатием левой кнопки мыши.
 . Изучить краткую инструкцию, выведенную в консольное окно.
-. В консольном окне указать один или несколько терминов, разделенные любым не буквенным и не цифровым символом, кроме `_` и `-`, или одну из предусмотренных опций:
+. В консольном окне указать один или несколько терминов, разделенные пробелом, или одну из предусмотренных опций:
 +
 * `-a`/`--all` -- вывод всех терминов и сокращений на английском;
 * `-f`/`--full` -- вывод всех терминов и сокращений, а также их полные расшифровки и комментарии;
