--- a/docs/README_list_files.adoc
+++ b/docs/README_list_files.adoc
@@ -1,4 +1,4 @@
-= Руководство для list_files.py
+= Руководство для list-files
 :experimental:
 :icons: font
 :source-highlighter: rouge
@@ -9,13 +9,7 @@
 :nofooter:
 :toc: auto
 :toc-title: Содержание
-
-tl;dr Чтобы запустить, необходимо выполнить в командной строке:
-
-[source,shell]
-----
-$ py list_files.py <path_to_project>/content/common
-----
+:script-name: list-files
 
 == Описание
 
@@ -53,141 +47,79 @@ $ py list_files.py <path_to_project>/content/common
 Изначально скрипт написан для удобства создания файла `PDF_*.yml`, необходимого для генерации PDF. +
 Однако возможно использовать и для любых других целей, задав соответствующие опции.
 
-== Как запустить?
-
-Запускается так же, как и любые другие скрипты:
-
-[source,shell]
-----
-$ py <path/to/list_files.py> <OPTIONS> // <1> <2>
-----
-
-<1> path/to/list_files.py -- путь до скрипта `list_files.py`
-<2> OPTIONS -- опции скрипта
+include::partials/run.adoc[]
 
 === Опции скрипта
 
-NOTE: Здесь предполагается, что скрипт находится в директории, откуда запускается, +
-т.е. `<path/to/list_files.py>` -> `list_files.py`.
-
-[source,console]
+[source,console,subs="attributes"]
 ----
-Использование: py list_files.py ROOT_DIR
-[ -d/--ignored-dirs DIRNAME | --all-dirs ]
-[ -e/--extensions 'EXTENSION EXTENSION' | --all-ext ]
-[ -f/--ignored-files FILE | --all-files ]
-[ -l/--language LANGUAGE | --all-langs ]
-[ -p/--prefix PREFIX ]
-[ --hidden/--no-hidden ]
-[ --recursive/--no-recursive ]
-[ -v/--version ]
-[ -h/--help ]
+Использование:
+py {name} {script-name}
+-d/--ignored-dirs <DIR> ... <DIR>
+--all-dirs
+-f/--ignored-files <FILE> ... <FILE>
+--all-files
+-e/--extensions "<EXT> ... <EXT>"
+--all-ext
+-l/--language <LANG>
+--all-langs
+-p/--prefix <PFX>
+--hidden
+--recursive
+--keep-logs
+ROOT_DIR
 
-Вывод файлов в директории
+  Команда для вывода файлов в директории
 
-Обязательные параметры:
-  root_dir              Путь до директории.
-                        По умолчанию: текущая директория.
+Аргументы:
+  root_dir                               Путь до директории. По умолчанию:
+                                         текущая директория
 
-Опциональные параметры:
-  -d [IGNORED_DIRS ...], --ignore-dirs [IGNORED_DIRS ...]
-                        Перечень игнорируемых директорий.
-                        Может использоваться несколько раз.
-                        По умолчанию: _temp_folder, _temp_storage, private.
-  --all-dirs            Флаг обработки всех директорий.
-                        По умолчанию: False.
-  -e [EXTENSIONS], --extensions [EXTENSIONS]
-                        Обрабатываемые типы файлов.
-                        Задаются перечислением, разделяемые пробелом.
-                        По умолчанию: md adoc.
-  --all-ext             Флаг обработки всех файлов.
-                        По умолчанию: True.
-  -f [IGNORED_FILES ...], --ignore-files [IGNORED_FILES ...]
-                        Перечень игнорируемых файлов.
-                        Может использоваться несколько раз.
-                        По умолчанию: README, _check_list.
-  --all-files           Флаг обработки всех файлов.
-                        По умолчанию: False.
-  -l [LANGUAGE], --language [LANGUAGE]
-                        Язык файлов.
-                        По умолчанию: ''.
-  --all-langs           Флаг обработки файлов всех языков.
-                        По умолчанию: True.
-  -p [PREFIX], --prefix [PREFIX]
-                        Префикс, добавляемый к названиям файлов.
-                        По умолчанию: ''.
-  --hidden, --no-hidden
-                        Флаг поиска скрытых файлов.
-                        По умолчанию: False.
-  --recursive, --no-recursive
-                        Флаг рекурсивного поиска файлов.
-                        По умолчанию: True.
-  -v, --version         Показать версию скрипта и завершить работу.
-  -h, --help            Показать справку и завершить работу.
+Опции:
+  -d, --ignored-dirs <DIR> ... <DIR>     Перечень игнорируемых директорий. Может использоваться несколько раз.
+                                         По умолчанию: _temp_folder, _temp_storage, private.
+                                         Примечание. Аргумент не может использоваться одновременно с
+                                         --all-dirs
+  --all-dirs                             Флаг обработки всех директорий.
+                                         По умолчанию: False.
+                                         Примечание. Аргумент не может использоваться одновременно с
+                                         --ignored-dirs
+  -f, --ignored-files <FILE> ... <FILE>  Перечень игнорируемых файлов. Может использоваться несколько раз.
+                                         По умолчанию: README, _check_list.
+                                         Примечание. Аргумент не может использоваться одновременно с
+                                         --all-files
+  --all-files                            Флаг обработки всех файлов.
+                                         По умолчанию: False, выводятся файлы с определенными именами.
+                                         Примечание. Аргумент не может использоваться одновременно с
+                                         --ignored-files
+  -e, --extensions "<EXT> ... <EXT>"     Обрабатываемые типы файлов. Задаются перечислением, разделяемые пробелом.
+                                         По умолчанию: md adoc.
+                                         Примечание. Аргумент не может использоваться одновременно с
+                                         --all-extensions
+  --all-ext                              Флаг обработки файлов всех расширений.
+                                         По умолчанию: False, выводятся файлы определенных расширений.
+                                         Примечание. Аргумент не может использоваться одновременно с
+                                         --extensions
+  -l, --language <LANG>                  Язык файлов.
+                                         По умолчанию: "", выводятся все файлы независимо от языка.
+                                         Примечание. Аргумент не может использоваться одновременно с
+                                         --all-languages
+  --all-langs                            Флаг обработки файлов всех языков.
+                                         По умолчанию: True, выводятся файлы на любом языке.
+                                         Примечание. Аргумент не может использоваться одновременно с
+                                         --language
+  -p, --prefix <PFX>                     Префикс, добавляемый к названиям файлов.
+                                         По умолчанию: '- content/common/'
+  --hidden / --no-hidden                 Флаг поиска скрытых файлов.
+                                         По умолчанию: False, скрытые файлы не выводятся
+  --recursive / --no-recursive           Флаг рекурсивного поиска файлов.
+                                         По умолчанию: True, поиск файлов по вложенным папкам
+  --keep-logs                            Флаг сохранения директории с лог-файлом по завершении
+                                         работы в штатном режиме.
+                                         По умолчанию: False, лог-файл и директория удаляются
+  -h, --help                             Вывести справочную информацию на
+                                         экран и завершить работу
+----------------------------------------------------------------------------------------------------
 ----
 
-* [[dirs]]`--all-dirs` -- флаг обработки всех директорий.
-По умолчанию: False.
-Взаимоисключает опцию <<d,-d/--ignore-dirs>>.
-* [[ext]]`--all-ext` -- флаг обработки всех файлов.
-По умолчанию: False.
-Взаимоисключает опцию <<e,-e/--extensions>>.
-* [[files]]`--all-files` -- флаг обработки всех файлов.
-По умолчанию: False.
-Взаимоисключает опцию <<f,-f/--ignore-files>>.
-* [[langs]]`--all-langs` -- флаг обработки файлов всех языков.
-По умолчанию: True.
-Взаимоисключает опцию <<l,-l/--language>>.
-* [[d]]`-d`/`--ignore-dirs` -- название директории, которую необходимо проигнорировать.
-Для задания набора значений опцию можно использовать несколько раз.
-По умолчанию: `_temp_folder, private`.
-Взаимоисключает опцию <<dirs,--all-dirs>>.
-* [[e]]`-e`/`--extensions` -- набор искомых расширений файла в виде строки.
-Для задания нескольких значений необходимо указать их, разделяя пробелом, при этом заключить все значения в кавычки.
-По умолчанию: `"md adoc"`.
-Взаимоисключает опцию <<ext,--all-ext>>.
-* [[f]]`-f`/`--ignore-files` -- название файла, которое необходимо проигнорировать.
-Для задания набора значений опцию можно использовать несколько раз.
-По умолчанию: `README, _check_list`.
-Взаимоисключает опцию <<files,--all-files>>.
-* [[l]]`-l`/`--language` -- аббревиатура языка из двух букв, требуемого для файлов.
-По умолчанию: `ru`.
-Взаимоисключает опцию <<langs,--all-langs>>.
-* `-p`/`--prefix` -- префикс, добавляемый к началу пути до файла.
-По умолчанию: ``.
-* `--hidden` | `--no-hidden` -- флаг поиска скрытых файлов.
-По умолчанию: `--no-hidden`.
-* `--recursive` | `--no-recursive` -- флаг рекурсивного поиска файлов.
-По умолчанию: `--recursive`.
-* `-v`/`--version` -- отображение версии скрипта и завершение работы скрипта.
-Не сочетается ни с какими другими опциями.
-* `-h`/`--help` -- отображение справочной информации и завершение работы скрипта.
-Не сочетается ни с какими другими опциями.
-
-=== Как использовать?
-
-NOTE: Хотя `ROOT_DIR` является обязательным параметром, его можно опустить, если файл скрипта находится в той же директории, что и требуемая.
-
-Если директория не указана, то будет использоваться та, из которой был вызван скрипт в командной строке.
-
-Поэтому предлагается следующее решение как самое простое:
-
-. Загрузить скрипт по https://gitlab.com/tech_writers_protei/scripts/-/raw/main/scripts/list_files.py[ссылке].
-. Перенести его в ту же директорию, где находятся все проекты `PycharmProjects` или `IdeaProjects`.
-+
-NOTE: Как правило, это директория `С:\Users\<login>\`.
-+
-. При необходимости проверить YAML-файл в проекте, воспользоваться встроенной консолью IDE.
-+
-.Иконка консоли
-image::find_console.png[align="center",width=960]
-+
-.Консоль в IDE
-image::console_ide.png[align="center",width=960]
-+
-. Перейти в директорию проекта, если текущее местоположение от него отличается, с помощью команды `cd`.
-. В консоли указать команду `py ..\list_files.py`.
-
-TIP: Чтобы удобно и быстро получить путь до файла, можно выполнить следующие шаги:
-
-include::partials/get_path.adoc[]
+NOTE: Путь может быть как абсолютным, так и относительным.
