--- a/docs/README_repair_svg.adoc
+++ b/docs/README_repair_svg.adoc
@@ -1,4 +1,4 @@
-= Руководство для repair_svg.py
+= Руководство для repair-svg
 :experimental:
 :icons: font
 :source-highlighter: rouge
@@ -9,6 +9,9 @@
 :nofooter:
 :toc: auto
 :toc-title: Содержание
+:sectnums:
+:script-name: repair-svg
+:name: tw_utilities.exe
 
 == Описание
 
@@ -18,41 +21,36 @@
 
 == Для чего нужно?
 
-На данный момент сборка осуществляется с помощью AsciiDoc, в частности, с помощью библиотеки `asciidoctor-pdf`, которая использует для обработки изображений библиотеку `prawn`, которая не может корректно работать с некоторыми изображениями.
+На данный момент сборка осуществляется с помощью AsciiDoc, в частности, с помощью библиотеки `asciidoctor-pdf`.
+Она использует для обработки изображений библиотеку `prawn`, которая не может корректно работать с некоторыми изображениями, в частности, с теми, что оперируют внешними ссылками `<foreignObject />`.
 
-== Как запустить?
-
-Запускается так же, как и любые другие скрипты:
-
-[source,shell]
-----
-$ py <path/to/repair_svg.py> <PATH> .. <PATH>  # <1> <2>
-----
-
-<1> path/to/repair_svg.py -- путь до скрипта `repair_svg.py`
-<2> PATH -- путь до файла
+include::partials/run.adoc[]
 
 === Опции скрипта
 
-NOTE: Здесь предполагается, что скрипт находится в директории, откуда запускается, +
-т.е. `<path/to/repair_svg.py>` -> `repair_svg.py`.
-
-[source,console]
+[source,console,subs="attributes"]
 ----
-Использование: py repair_svg.py [ -h/--help | -v/--version ] PATH .. PATH
+Использование:
+py {name} {script-name}
+-f/--file <FILE> ... <FILE>
+-d/--dir <DIR>
+--recursive
+--keep-logs
 
-Исправление SVG
+  Команда для исправления файлов SVG
 
-Обязательные:
-  PATH            Путь до SVG-файла. Может использоваться несколько раз.
-
-Опциональные:
-  -v, --version   Показать версию скрипта и завершить работу
-  -h, --help      Показать справку и завершить работу
+Опции:
+  -f, --file <FILE> ... <FILE>           Файл для обработки.
+                                         Может использоваться несколько раз
+  -d, --dir <DIR>                        Директория для обработки
+  --recursive / --no-recursive           Флаг рекурсивного поиска файлов.
+                                         По умолчанию: True, поиск файлов по вложенным папкам
+  --keep-logs                            Флаг сохранения директории с лог-файлом по завершении
+                                         работы в штатном режиме.
+                                         По умолчанию: False, лог-файл и директория удаляются
+  -h, --help                             Вывести справочную информацию на
+                                         экран и завершить работу
+----------------------------------------------------------------------------------------------------
 ----
 
 NOTE: Путь может быть как абсолютным, так и относительным.
-
-TIP: Чтобы удобно и быстро получить путь до файла или директории, можно выполнить следующие шаги:
-
-include::partials/get_path.adoc[]
