--- a/docs/README_terms.adoc
+++ b/docs/README_terms.adoc
@@ -1,43 +1,82 @@
-= Инструкция по использованию
-:author: Andrew Tar
-:email: andrew.tar@yahoo.com
-:revdate: Jul 28, 2024
-:revnumber: 1.1.0
+= Руководство для terms
 :experimental:
 :icons: font
+:source-highlighter: rouge
+:imagesdir: images
+:figure-caption: Рисунок
+:stylesdir: ../css
+:stylesheet: default.css
+:nofooter:
+:toc: auto
+:toc-title: Содержание
+:sectnums:
+:script-name: terms
+:name: tw_utilities.exe
 
-Здесь приведена сокращенная информация о работе и запуске программы.
-Полная инструкция приведена в руководстве xref:manual.adoc[manual.adoc].
+== Описание
 
-== Алгоритм для использования программы
+Скрипт выводит расшифровки аббревиатур и сокращений, используемых в документации продуктов сетевых и мобильных технологий.
 
-. Загрузить файл `terms.exe`.
-. Запустить загруженный файл двойным нажатием левой кнопки мыши.
-. Изучить краткую инструкцию, выведенную в консольное окно.
-. В консольном окне указать один или несколько терминов, разделенные пробелом, или одну из предусмотренных опций:
-+
-* `-a`/`--all` -- вывод всех терминов и сокращений на английском;
-* `-f`/`--full` -- вывод всех терминов и сокращений, а также их полные расшифровки и комментарии;
-* `-h`/`--help` -- вывод краткой справочной информации;
-* `-r`/`--readme` -- вывод полной справочной информации из файла readme.txt;
-* `-s`/`--samples` -- вывод примеров использования.
-+
-Возможно также использование `--abbr` перед терминами, чтобы получить строки, подходящие для вставки в текст в качестве всплывающих подсказок, в формате:
-+
-[html]
+== Для чего нужно?
+
+При создании или изменении документа часто встречаются широко используемые аббревиатуры, которые не всегда с первого взгляда ясны и понятны.
+Также необходимо добавлять пояснения к сокращениям по тексту, поскольку достаточно многие имеют несколько возможных вариантов интерпретации.
+
+include::partials/run.adoc[]
+
+=== Опции скрипта
+
+[source,console,subs="attributes"]
 ----
-<abbr title="full_term">short_term</abbr>
-----
-+
-[start=5]
-. Повторить ввод терминов при необходимости.
-. Для завершения работы ввести один из символов:
-+
-* `__exit__`/`__quit__`
-* `exit`/`quit`
-* `!exit`/`!quit`
-* `!e`/`!q`
+Использование:
+py {name} {script-name}
+-a/--all
+-f/--full
+-i/--info
+-r/--readme
+-s/--samples
+--abbr
+--ascii
+--common
+--keep-logs
+TERMS
 
-CAUTION: На Рабочем столе (Desktop) создается, а затем при успешном завершении работы удаляется директория
-`_terms_logs`.
-Она используется для хранения журнала `terms_debug`.
+  Команда для вывода расшифровки аббревиатур
+
+Аргументы:
+  args                                   Перечень запрашиваемых аббревиатур
+
+Опции:
+  -a, --all                              Флаг вывода всех сокращений.
+                                         Примечание. Аргумент не может использоваться одновременно с
+                                         --samples-flag, --full-flag, --readme-flag
+  -f, --full                             Флаг вывода всех сокращений с их расшифровками.
+                                         Примечание. Аргумент не может использоваться одновременно с
+                                         --all-flag, --samples-flag, --readme-flag
+  -i, --info                             Флаг вывода полного руководства.
+                                         Примечание. Аргумент не может использоваться одновременно с
+                                         --all-flag, --samples-flag, --full-flag, --readme-flag
+  -r, --readme                           Флаг вывода полного руководства.
+                                         Примечание. Аргумент не может использоваться одновременно с
+                                         --all-flag, --samples-flag, --full-flag, --info-flag
+  -s, --samples                          Флаг вывода примеров использования.
+                                         Примечание. Аргумент не может использоваться одновременно с
+                                         --all-flag, --full-flag, --readme-flag, --info-flag
+  --abbr                                 Флаг вывода сокращения для добавления в файл Markdown.
+                                         Формат: <abbr title=""></abbr>.
+                                         Примечание. Аргумент не может использоваться одновременно с
+                                         --common-flag, --ascii-flag
+  --ascii                                Флаг вывода сокращения для добавления в файл AsciiDoc.
+                                         Формат: pass:q[<abbr title=""></abbr>].
+                                         Примечание. Аргумент не может использоваться одновременно с
+                                         --common-flag, --abbr-flag
+  --common                               Флаг вывода сокращения в свободном виде.
+                                         Примечание. Аргумент не может использоваться одновременно с
+                                         --ascii-flag, --abbr-flag
+  --keep-logs                            Флаг сохранения директории с лог-файлом по завершении
+                                         работы в штатном режиме.
+                                         По умолчанию: False, лог-файл и директория удаляются
+  -h, --help                             Вывести справочную информацию на
+                                         экран и завершить работу
+----------------------------------------------------------------------------------------------------
+----
