--- a/docs/README_validate_yaml_file.adoc
+++ b/docs/README_validate_yaml_file.adoc
@@ -1,4 +1,4 @@
-= Руководство для validate_yaml_file.py
+= Руководство для validate-yaml
 :experimental:
 :icons: font
 :source-highlighter: rouge
@@ -10,6 +10,8 @@
 :toc: auto
 :toc-title: Содержание
 :script-name: validate_yaml_file
+:sectnums:
+:name: tw_utilities.exe
 
 == Описание
 
@@ -19,6 +21,7 @@
 
 Для секций показывается некорректно заданный параметр, некорректный тип значения параметра, отсутствие обязательного параметра или отсутствие обязательной секции.
 
+[source,console]
 ----
 Отсутствует раздел <part>
 Раздел <part> должен быть типа object, но получено <type>
@@ -26,84 +29,39 @@
 В секции <part>::<section> отсутствует ключ <key>
 ----
 
-[,console]
-----
-<line no> <path to file> ...... <OK/NOT OK>
-----
-
-* `line no` -- номер строки в исходном файле;
-* `path to file` -- текст строки;
-* `OK/NOT OK` -- флаг существования файла по указанному пути.
-
-include::partials/check_yml_sample.adoc[]
-
-Поскольку в выводе много строк, то для удобства ориентирования в нем используется интуитивная цветовая индикация.
-
-CAUTION: Скрипт не показывает, где именно ошибка, это остается делом пользователя, а указывает лишь на сам факт ее существования.
-
 == Для чего нужно?
 
 Изначально скрипт написан для проверки файла `PDF_*.yml`, необходимого для генерации PDF. +
 Ввиду того, что генерация PDF осуществляется целой партией, bundle, то ошибка с одним проектом ведет к отбою обновления всех других.
 
-== Как запустить?
-
-Запускается так же, как и любые другие скрипты:
-
-[source,shell,subs=attributes+]
-----
-$ py <path/to/{script-name}.py> <OPTIONS> // <1> <2>
-----
-
-<1> path/to/{script-name}.py -- путь до скрипта `{script-name}.py`
-<2> OPTIONS -- опции скрипта
+include::partials/run.adoc[]
 
 === Опции скрипта
-
-NOTE: Здесь предполагается, что скрипт находится в директории, откуда запускается, +
-т.е. `<path/to/{script-name}.py>` -> `{script-name}.py`.
 
 [source,console,subs=+attributes]
 ----
 Использование:
-py {script-name}.py [ -h/--help | -v/--version ] YAML_FILE [ -o/--output OUTPUT ] [ --verbose ]
+py {name} {script-name} YAML_FILE
+-o/--output <FILE>
+--verbose
+--keep-logs
 
-Валидация YAML-файла для PDF
+  Команда для валидации YAML-файла, используемого при генерации PDF
 
-Обязательные параметры:
-  yaml_file             Путь до файла PDF_*.yml
+Аргументы:
+  yaml_file                              Путь до файла PDF_*.yml
 
-Опциональные:
-  -o OUTPUT, --output OUTPUT
-                        Файл для записи вывода
-  --verbose             Флаг подробного вывода
-  -v, --version         Показать версию скрипта и завершить работу
-  -h, --help            Показать справку и завершить работу
+Опции:
+  -o, --output <FILE>                    Файл для записи вывода.
+                                         По умолчанию: вывод в консоль
+  --verbose / --no-verbose               Флаг подробного вывода.
+                                         По умолчанию: False, выводятся только ошибки
+  --keep-logs                            Флаг сохранения директории с лог-файлом по завершении
+                                         работы в штатном режиме.
+                                         По умолчанию: False, лог-файл и директория удаляются
+  -h, --help                             Вывести справочную информацию на
+                                         экран и завершить работу
+----------------------------------------------------------------------------------------------------
 ----
 
-=== Как использовать?
-
-Самое простое решение:
-
-. Загрузить скрипт по https://gitlab.com/tech_writers_protei/scripts/-/raw/main/scripts/{script-name}.py?inline=false[ссылке].
-. Перенести его в ту же директорию, где находятся все проекты `PycharmProjects` или `IdeaProjects`.
-+
-NOTE: Как правило, это директория `С:\Users\<login>\`.
-+
-. При необходимости проверить YAML-файл в проекте, воспользоваться встроенной консолью IDE.
-+
-.Иконка консоли
-image::find_console.png[align="center",width=960]
-+
-.Консоль в IDE
-image::console_ide.png[align="center",width=960]
-+
-. Перейти в корень проекта, если текущее местоположение от него отличается, с помощью команды `cd`.
-. В консоли указать команду `py ..{backslash}{script-name}.py`.
-
-При желании записи в файл команда изменится на `py ..{backslash}{script-name}.py -o "<file_name>.log"` +
-или `py ..{backslash}{script-name}.py --output="<file_name>.log"`.
-
-TIP: Чтобы удобно и быстро получить путь до файла, можно выполнить следующие шаги:
-
-include::partials/get_path.adoc[]
+NOTE: Путь может быть как абсолютным, так и относительным.
