--- a/docs/README_link_repair.adoc
+++ b/docs/README_link_repair.adoc
@@ -66,3 +66,201 @@ PATHDIR
 ----
 
 NOTE: Путь может быть как абсолютным, так и относительным.
+
+== Вывод программы
+
+=== Критические ошибки
+
+.link_repair: error: unrecognized arguments: ...
+[source,shell]
+----
+link_repair: error: unrecognized arguments: --arg
+----
+
+Означает, что указана не существующий ключ.
+
+.Директория ... не найдена
+[source,shell]
+----
+InvalidDirectoryPathError, Директория path/to/dir не найдена
+----
+
+Означает, что указана не существующая директория.
+
+.Путь ... указывает не на директорию
+[source,console]
+----
+InvalidDirectoryPathError, Путь path/to/file указывает не на директорию
+----
+
+Означает, что путь ведет не к директории или же является символической ссылкой.
+
+=== Ошибки, требующие ручного исправления
+
+.В директории ... не найдены файлы с расширением .md, .adoc
+[source,console]
+----
+!  В директории path/to/directory не найдены файлы с расширением .md, .adoc  ! // <1>
+----
+
+Означает, что в директории *<1>* нет ни одного Markdown-/AsciiDoc-файла.
+
+.Внутри файла ... найдены дублирующиеся якори: ...
+[source,console]
+----
+---------- Не исправлено автоматически ----------
+Внутри файла content/common/path/to/file.md найдены дублирующиеся якори: // <1>
+invalid-anchor, another-invalid-anchor // <2> <3>
+-------------------------------------------------
+----
+
+Означает, что в файле *<1>* обнаружены якори *<2>* и *<3>*, которые привязаны к нескольким местам в тексте.
+
+.Найдены повторяющиеся якори
+[source,console]
+----
+---------- Не исправлено автоматически ----------
+Найдены повторяющиеся якори:
+invalid-anchor // <1>
+
+Якорь invalid-anchor повторяется в файлах: // <2>
+/path/to/file.md // <3>
+/path/to/another_file.md // <4>
+-------------------------------------------------
+----
+
+Означает, что найдены якори *<1>*, которые встречаются в различных файлах в проекте.
+Один и тот же якорь *<2>* обнаружен в файлах *<3>* и *<4>*.
+
+****
+Почему это проблема?
+
+Дублирование якорей никак не влияет на отображение HTML, т.е. на сайте.
+Однако в PDF это нарушает работу ссылок.
+В HTML такие якори находятся на разных страницах и никак не взаимодействуют друг с другом.
+В PDF такие якори не позволяют однозначно привязать их к определенным местам в тексте.
+Ввиду этого ссылки останутся в создаваемом документе, но не будут куда-либо переходить или выполнять любое другое
+действие.
+****
+
+.Якорь ... в файле ... не найден
+[source,console]
+----
+---------- Не исправлено автоматически ----------
+Якорь anchor в файле content/common/path/to/dest.md не найден // <1>
+-------------------------------------------------
+
+---------- Не исправлено автоматически ----------
+В файле content/common/path/from/source.md ссылка должна быть: // <2>
+../to/dest/#_valid_anchor_, но получено
+../to/dest/#_anchor/
+-------------------------------------------------
+----
+
+Означает, что в файле *<2>* есть корректная ссылка на файл *<1>*, но указан якорь, которого нет в файле *<1>*.
+
+.Не найден якорь ... в файле ...
+[source,console]
+----
+---------- Не исправлено автоматически ----------
+Не найден якорь anchor в файле content/common/path/file.md. // <1> <2>
+Строки: 0, 1 // <3>
+-------------------------------------------------
+----
+
+Означает, что в файле *<2>* есть внутренняя ссылка на якорь *<1>*, которого нет в файле.
+Ссылки обнаружены в строках *<3>*.
+
+.Файл по пути ... не найден
+[source,console]
+----
+---------- Не исправлено автоматически ----------
+Файл по пути content/common/path/to/file.md не найден
+-------------------------------------------------
+----
+
+Означает, что ссылка указывает на файл, находящийся вне заданной директории.
+
+.Не удалось обработать ссылку в файле
+[source,console]
+----
+---------- Не исправлено автоматически ----------
+Не удалось обработать ссылку в файле.
+Ссылка: ../../path/to/file/#anchor // <1>
+Файл: content/common/another/file.md // <2>
+-------------------------------------------------
+----
+
+Означает, что в файле *<2>* обнаружен текст *<1>*, попадающий под паттерн ссылки, но имеющий синтаксическую ошибку,
+которая не позволяет обработать этот текст далее.
+
+=== Предупреждения и оповещения
+
+.!  В файле ... ссылка должна быть
+[source,console]
+----
+!  В файле content/common/path/to/file.md ссылка должна быть: // <1>
+../../another/file/#anchor, но получено // <2>
+../and_another/file/#anchor/  ! // <3>
+----
+
+Означает, что в файле *<1>* обнаружена некорректная ссылка *<3>*, но удалось ее автоматически исправить на верную
+ссылку *<2>*.
+
+.Проверка дублирования якорей отключена пользователем
+----
+Проверка дублирования якорей отключена пользователем
+----
+
+Означает, что якори не анализируются.
+
+NOTE: Отображается только при отсутствии опции `-a`/`--anchor-disable` или при отключении опции "Проверить якори
+внутри файлов".
+
+.{two-colons}Изменено{two-colons}Файл
+[source,console]
+----
+::Изменено::Файл content/common/path/to/file.md: // <1>
+../and_another/file/#anchor/ -> ../../another/file/#anchor // <2> <3>
+----
+
+Означает, что в файле *<1>* ссылка *<2>* заменена на ссылку *<3>*.
+
+.Файл ... записан
+[source,console]
+----
+Файл content/common/path/to/file.md записан // <1>
+----
+
+Означает, что содержимое файла *<1>* обновлено.
+
+NOTE: Отображается только при отсутствии опции `-d`/`--dry-run` или при активации опции "Изменить файлы в
+директории".
+
+.Работа завершена
+[source,console]
+----
+Работа завершена.
+----
+
+Означает, что работа скрипта остановлена штатно.
+
+.Файлы не изменены
+[source,console]
+----
+==================== Файлы не изменены ====================
+----
+
+Означает, что отображенные изменения не были применены.
+
+NOTE: Отображается только при использовании опции `-d`/`--dry-run` или при отключении опции "Изменить файлы в
+директории".
+
+== Некоторые особенности работы
+
+* Проверяются только Markdown- и AsciiDoc-файлы, все остальные (+*+.txt, без расширения, ...) игнорируются.
+* При использовании в операционной системе Windows скрипт должен располагаться на том же диске (томе), что и
+директория, для которой он используется. Не устранимо ввиду принципов работы операционной системы.
+* Ссылки, которые указывают на файлы, находящиеся не в заданной директории, помечаются как некорректные.
+* Ссылки, начинающиеся с `http`, `mailto` и `/` игнорируются.
+* Нумерация строк начинается с 0.
