--- a/docs/README_terms.adoc
+++ b/docs/README_terms.adoc
@@ -29,7 +29,7 @@ include::partials/run.adoc[]
 [source,console,subs="attributes"]
 ----
 Использование:
-py {name} {script-name}
+{name} {script-name}
 -a/--all
 -f/--full
 -i/--info
