--- a/docs/README_check_russian.adoc
+++ b/docs/README_check_russian.adoc
@@ -44,7 +44,7 @@ include::partials/run.adoc[]
 [source,console,subs="attributes"]
 ----
 Использование:
-py {name} {script-name}
+{name} {script-name}
 -f/--file <FILE> ... <FILE>
 -d/--dir <DIR>
 --recursive
