--- a/docs/README_link_repair.adoc
+++ b/docs/README_link_repair.adoc
@@ -29,7 +29,7 @@ include::partials/run.adoc[]
 [source,console,subs="attributes"]
 ----
 Использование:
-py {name} {script-name}
+{name} {script-name}
 -d/--dry-run
 -n/--no-result
 -a/--anchor-disable
