--- a/docs/README_format_code.adoc
+++ b/docs/README_format_code.adoc
@@ -1,3 +1,4 @@
+[[format-code]]
 = Руководство для format-code
 :experimental:
 :icons: font
@@ -10,7 +11,7 @@
 :toc: auto
 :toc-title: Содержание
 :sectnums:
-:script-name: repair-svg
+:script-name: format-code
 :name: tw_utilities.exe
 
 == Описание
